Fix too big image

--- a/src/style/works.css
+++ b/src/style/works.css
@@ -40,3 +40,7 @@
   color:#FFF;
   transform: scale(1.1);
 }
+
+img {
+  max-height:400px;
+}
